Allow selecting sheet when saving CV summary
